# stdr_libraries

./: README.md
agent/: CMakeLists.txt  package.xml
agent/include/agent/: agent.h  lockable.h
agent/src/lib/: lockable.cpp
agent/src/test/: test_lockable.cpp
bag_of_tricks/: CMakeLists.txt  distribution_stats.py  package.xml
bag_of_tricks/include/bag_of_tricks/: bag_of_tricks.h  connected_components.h  glob.h  image_view_window.h  next_path.h
bag_of_tricks/src/: connected_components.cpp  high_res_timer.cpp  image_view_window.cpp  lockable.cpp  next_path.cpp  test_lockable.cpp  test_next_path.cpp  tfm_broadcaster.cpp
eigen_extensions/: CMakeLists.txt  package.xml
eigen_extensions/include/eigen_extensions/: eigen_extensions.h  random.h
eigen_extensions/src/: random.cpp  test_random.cpp
fastjpeg/: CMakeLists.txt  Findlibjpeg.cmake  package.xml
fastjpeg/include/fastjpeg/: fastjpeg.h
fastjpeg/src/: fastjpeg.cpp
global_coords/: CMakeLists.txt  package.xml
global_coords/include/global_coords/: global_coords.h
global_coords/src/: global_coords.cpp  test_global_coords.cpp
glsupport/: CMakeLists.txt  package.xml
glsupport/include/glsupport/: fontRenderer.h  glsupport.h  textures.h
glsupport/src/: fontRenderer.cpp  glsupport.cpp  textures.cpp
matplotlib_interface/: CMakeLists.txt  package.xml
matplotlib_interface/include/matplotlib_interface/: matplotlib_interface.h
matplotlib_interface/src/: example.cpp  matplotlib_interface.cpp
serializable/: CMakeLists.txt  package.xml
serializable/include/serializable/: serializable.h
serializable/src/lib/: serializable.cpp
serializable/src/test/: test_serializable.cpp
stdr_grid/: CMakeLists.txt  package.xml
stdr_grid/include/stdr_grid/: grid.h  rolling_grid.h
stdr_grid/src/: sanity_check.cpp  test_floor_time.cpp  test_grid.cpp
stdr_lib/: CMakeLists.txt  package.xml
stdr_lib/include/stdr_lib/: exception.h  heat_map.h  roslib_helpers.h  rosparam_helpers.h  unit_conversions.h
stdr_lib/src/: heat_map.cpp  roslib_helpers.cpp  test_find_file.cpp
timer/: CMakeLists.txt  package.xml
timer/include/timer/: timer.h
timer/src/lib/: timer.cpp
timer/src/test/: test_timer.cpp
yaml_cpp/: CMakeLists.txt  package.xml
yaml_cpp/include/yaml-cpp/node/detail/: node_data.h
