<?xml version="1.0"?>
<package>
  <name>agent</name>
  <version>0.0.0</version>
  <description>The agent package</description>

  <maintainer email="teichman@cs.stanford.edu">Alex Teichman</maintainer>
  <author email="teichman@cs.stanford.edu">Alex Teichman</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
