<?xml version="1.0"?>
<package>
  <name>fastjpeg</name>
  <version>0.0.0</version>
  <description>Provides an API to compress and decompress jpeg images.</description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>libjpeg</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>libjpeg</run_depend>
  
</package>
