<?xml version="1.0"?>
<package>
  <name>global_coords</name>
  <version>0.0.0</version>
  <description>Provides an API to work with coordinates in global frame. Both
    latitude,longitude and UTM are supported, with functions to convert between
    the two.
  </description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>eigen</run_depend>

</package>
