<?xml version="1.0"?>
<package>
  <name>glsupport</name>
  <version>0.0.0</version>
  <description>A library to help with OpenGL drawing.</description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>stdr_lib</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libftgl-dev</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>stdr_lib</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>opengl</run_depend>
  <run_depend>glut</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libftgl-dev</run_depend>
  
</package>
