<?xml version="1.0"?>
<package>
  <name>matplotlib_interface</name>
  <version>0.0.0</version>
  <description>This can be used to run some python code, including plotting with
     matplotlib. C++ data (including Eigen data) can be exported into a Python
     virtual machine, and python commands can be called on them. See example.cpp
     to see how it works.
  </description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <license>TODO</license>

  <author email="teichman@cs.stanford.edu">Alex Teichman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>python-matplotlib</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>python-matplotlib</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>texlive-latex-base</run_depend>
  <run_depend>texlive-fonts-recommended</run_depend>
</package>
