<?xml version="1.0"?>
<package>
  <name>timer</name>
  <version>0.0.0</version>
  <description>The timer package</description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>TODO</license>
  <author email="teichman@cs.stanford.edu">Alex Teichman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <test_depend>gtest</test_depend>
</package>
