<?xml version="1.0"?>
<package>
  <name>yaml_cpp</name>
  <version>0.0.0</version>
  <description>WARNING: This package may have a horrible, gross hack that fixes
    the ordering of the YAML nodes when they are emitted.
  </description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <license>TODO</license>
  <author email="teichman@cs.stanford.edu">Alex Teichman</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
